# python

./: .build.sh  .deploy.sh  .gitmodules  .local_build_and_test.sh  .travis.yml  CMakeLists.txt  Jenkinsfile  README.md  appveyor.yml  dqrobotics_module.cpp  pyproject.toml  regenerate_stubs.py  setup.py
.github/workflows/: python_package.yml  python_package_ubuntu.yml
dqrobotics/: __init__.py
dqrobotics-stubs/: README.md
dqrobotics/interfaces/: __init__.py
dqrobotics/interfaces/coppeliasim/: __init__.py
dqrobotics/interfaces/json11/: __init__.py
dqrobotics/interfaces/vrep/: __init__.py
dqrobotics/interfaces/vrep/robots/: __init__.py
dqrobotics/robot_control/: __init__.py
dqrobotics/robot_modeling/: __init__.py
dqrobotics/robots/: __init__.py
dqrobotics/solvers/: __init__.py  _dq_cplex_solver.py  _dq_quadprog_solver.py
dqrobotics/utils/: __init__.py
dqrobotics/utils/DQ_LinearAlgebra/: __init__.py
dqrobotics/utils/DQ_Math/: __init__.py
src/: DQ_py.cpp  dqrobotics_module.cpp  dqrobotics_module.h
src/interfaces/coppeliasim/: DQ_CoppeliaSimInterfaceZMQ_py.cpp  DQ_CoppeliaSimInterface_py.cpp
src/interfaces/json11/: DQ_JsonReader_py.cpp
src/interfaces/vrep/: DQ_SerialVrepRobot_py.cpp  DQ_VrepInterface_py.cpp  DQ_VrepRobot_py.cpp
src/robot_control/: DQ_ClassicQPController_py.cpp  DQ_KinematicConstrainedController_py.cpp  DQ_KinematicController_py.cpp  DQ_NumericalFilteredPseudoInverseController_py.cpp  DQ_PseudoinverseController_py.cpp  DQ_QuadraticProgrammingController_py.cpp  DQ_TaskSpacePseudoInverseController_py.cpp  DQ_TaskspaceQuadraticProgrammingController_py.cpp
src/robot_modeling/: DQ_CooperativeDualTaskSpace_py.cpp  DQ_DifferentialDriveRobot_py.cpp  DQ_HolonomicBase_py.cpp  DQ_Kinematics_py.cpp  DQ_MobileBase_py.cpp  DQ_SerialManipulatorDH_py.cpp  DQ_SerialManipulatorDenso_py.cpp  DQ_SerialManipulatorMDH_py.cpp  DQ_SerialManipulator_py.cpp  DQ_SerialWholeBody_py.cpp  DQ_WholeBody_py.cpp
src/solvers/: DQ_QuadraticProgrammingSolver_py.cpp
src/utils/: DQ_Geometry_py.cpp  DQ_LinearAlgebra_py.cpp  DQ_Math_py.cpp
trunk/pybind11/: CMakeLists.txt  setup.py
